Fix padding on mobile

--- a/ui.frontend/src/layouts/YellowDownload/YellowDownload.scss
+++ b/ui.frontend/src/layouts/YellowDownload/YellowDownload.scss
@@ -4,7 +4,7 @@
   background-color: $primary-200;
 
   @include breakpoint("md") {
-    padding: 32px 27px;
+    padding: 32px 16px;
   }
 
   .grid--inner {
@@ -88,7 +88,6 @@
         }
       }
 
-      // TODO: Add on download component
       @include breakpoint("sm") {
         gap: 16px;
         justify-content: space-between;
